# academic-citation-assistant

./: .gitignore  CLAUDE.md  DOCKER_COMMANDS.md  README.md  docker-compose.yml  package-lock.json  package.json  reprocess-papers.py  test-all-features.sh  test-citation-functionality.md  test-paper-library.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  alembic.ini  backend_logs.txt  docker-rebuild.sh  measure_performance.py  monitor_processing.py  process_pdfs.py  process_pdfs_robust.py  pyproject.toml  quick_process_check.py  run.py  run_doi_migration.py  test_citation_system.py  test_enhanced_citations.py  test_frontend_format.py  test_logging_system.py  test_page_info.py  test_search.py  test_simple_enhanced.py  test_small_group_sync.py  test_websocket.py  test_websocket_enhanced.py  test_zotero.py  test_zotero_api_direct.py  test_zotero_config_update.py  test_zotero_direct_api.py  test_zotero_duplicate_doi.py  test_zotero_full.py  test_zotero_sync.py  test_zotero_sync_debug.py  test_zotero_sync_with_pdfs.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/docs/: external-api-research.md  usage.md
backend/scripts/: check_papers.py  create_test_user.py  create_test_user_simple.py  download_models.py  download_nltk_data.py  manual_migration.py  populate_test_papers.py  populate_test_papers_v2.py  test_full_system.py  test_websocket.py  test_ws_direct.py
backend/tests/: conftest.py  test_admin_clean.py  test_advanced_chunking.py  test_bulk_delete.py  test_citation_integration.py  test_citation_services.py  test_external_metadata_service.py  test_final_sync.py  test_frontend_integration.py  (+23 more)
(+164 files in other folders)
